<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginHorizontal="20dp"
    tools:context=".login.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="36sp"
        android:layout_marginTop="100dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_border"
        android:paddingHorizontal="10dp"
        android:hint="@string/email"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_border"
        android:paddingHorizontal="10dp"
        android:hint="@string/password"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRepeatPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_border"
        android:paddingHorizontal="10dp"
        android:hint="@string/repeat_password"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/back"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_error"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>